Handle multiple operations feature added, components and functions refactorized

--- a/src/ui/components/CalculatorNumber.module.scss
+++ b/src/ui/components/CalculatorNumber.module.scss
@@ -2,8 +2,8 @@
   width: 75px;
   height: 75px;
   border-radius: 50%;
-  font-size: 1.5rem;
-  font-weight: bold;
+  font-size: 30px;
+  font-weight: 400;
   background-color: #333;
   color: white;
   display: flex;
@@ -19,5 +19,5 @@
 }
 
 .light {
-  background-color: #a5a5a5;
+  background-color: #5c5c5d;
 }
