--- a/src/ui/App.module.scss
+++ b/src/ui/App.module.scss
@@ -4,7 +4,8 @@
   display: flex;
   flex-direction: column;
   align-content: center;
-  justify-content: center;
+  justify-content: end;
   gap: 10px;
+  padding: 0 0 10px 0;
   background-color: #000;
 }
